# TMD.TALib

./: .gitignore  README.md
3rd/ta-lib/: CMakeLists.txt
3rd/ta-lib/include/: TaLib.pas
3rd/ta-lib/include/backup/: TaLib.pas.bak
3rd/ta-lib/play/: play.c
3rd/ta-lib/src/ta_abstract/: excel_glue.c
3rd/ta-lib/src/ta_common/: ta_global.h
example/: Example.lpi  Example.lpr  Example.lps
src/: tmd.talib.defs.pas  tmd.talib.pas
